--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,24 @@ body{
   border-color: #562C0A;
   color: var(--clr-light);
 }
+.total-price {
+  font-size: 24px; 
+  font-weight: bold; 
+  margin-top: 20px; 
+  background-color: #f4f437;
+  border-radius: 50%;
+  padding: 1rem
+}
+.btn-continue {
+  margin: 10px;
+}
+.btn-end {
+  margin: 10px;
+  font-style: none;
+}
+.btn-order {
+  margin-bottom: 2rem;
+}
+.btn-delete {
+  margin: 1rem;
+}
