--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,11 @@ body{
 .btn-delete {
   margin: 1rem;
 }
+.img-adjust {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+.text-white {
+  color: whitesmoke;
+}
