--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
-*{ margin: 0;
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif; 
+  font-family: 'Lato', sans-serif;
   font-family: 'Montserrat', sans-serif
 }
+
 :root {
   --clr-light: #f5f5f5;
   --clr-dark: #27292b;
@@ -14,7 +16,8 @@
   --box-shadow: 0 0 10px rgba(0, 0, 0, .2);
   --box-shadow-expand: 0 0 15px rgba(0, 0, 0, .3);
 }
-body{
+
+body {
   background-color: var(--clr-light);
 
 }
@@ -26,50 +29,61 @@ body{
   padding: 6px;
   font-size: 17px;
 }
+
 .cart-icon:hover {
   color: #f7d7b7;
   background-color: #562C0A;
   border-radius: 12%;
-  transition-duration:0.8s ;
+  transition-duration: 0.8s;
 }
+
 .cart-count {
   margin: 5px
 }
+
 .btn-custom {
-  background-color:  #562C0A;
+  background-color: #562C0A;
   transition: background-color 0.6s ease-in-out;
   border-color: #562C0A;
   color: var(--clr-light);
 }
+
 .total-price {
-  font-size: 24px; 
-  font-weight: bold; 
-  margin-top: 20px; 
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 20px;
   background-color: #f4f437;
   border-radius: 50%;
   padding: 1rem
 }
+
 .btn-continue {
   margin: 10px;
 }
+
 .btn-end {
   margin: 10px;
   font-style: none;
 }
+
 .btn-order {
   margin-bottom: 2rem;
 }
+
 .btn-delete {
   margin: 1rem;
 }
+
 .img-adjust {
   max-height: 100%;
   max-width: 100%;
   object-fit: contain;
 }
+
 .text-white {
   color: whitesmoke;
 }
+
 .link-nostyle {
   text-decoration: none;
   color: white;
